fix : Category enum을 도메인으로 변경